• Забастовка закончилась падением режима и исполнением всех наших требований, УРА, ТОВАРИЩИ!