@@ -1,0 +1,12 @@
+{
+ "42834695": {
+  "greeting": "[id42834695|Коновалов], выключи хунту",
+  "timeout": 10,
+  "admined": true
+ },
+ "136776175": {
+  "greeting": "Хай",
+  "timeout": 10,
+  "admined": true
+ }
+}
