@@ -1,0 +1,5 @@
+Список подкоманд greet:
+• ﻿!greet me [сообщение] - добавить приветствие
+• ﻿!greet delete - удалить ваше приветствие
+• ﻿!greet [id] [сообщение] - добавить приветствие пользователю (только для администрации)
+• ﻿!greet delete [id] - удалить приветствие пользователю (только для администрации)
