@@ -2,6 +2,7 @@
 • ﻿!r - картинки с reddit.com (!help r)
 •  !changelog - вывести чейнджлог последнего обновления
 • ﻿!flipcoin - монетка
+•  !greet - приветствия (!help greet)
 • ﻿!ping - понг
 • ﻿!pong - пинг
 • ﻿!quote - вывести/добавить цитату многоуважаемого фюрера (!help quote)
