@@ -9,21 +9,23 @@
 • ﻿degrees(x) - Переводит угол x из радиан в градусы
 • ﻿exp(x) -  Возводит e в степень x
 • ﻿fabs(x) - Выводит модуль x
+• ﻿factorize(n) - разложение n на простые множители, в виде массива
 • ﻿floor(x) - Округляет x до ближайшего целого в  меньшую сторону
 • ﻿fmod(x, y) - Остаток от деления x на y
 • ﻿frexp(x) - Выводит мантиссу и экспоненту числа x
+• ﻿gcdext(a, b) - Расширенный алогитм Евклида для чисел a и b, ответ представляет собой tuple из d, x, y. Где d - НОД(a, b), а x и y являются целыми числами, такими что a*x+y*b=d
 • ﻿hypot(x, y) - Вычисляет гипотенузу прямоугольного треугольника с катетами x и y
+• ﻿int(x) - Переводит x в целое число
 • ﻿ldexp(x, i) - по мантиссе x и экспоненте i выводит число
 • ﻿log(a, b) - Логарифм числа a по основанию b
 • ﻿log10(x) - Десятичный логарифм числа a
 • ﻿modf(x) - Выводит дробную и целую часть числа x. Обе части сохраняют знак x
 • ﻿pow(x, y) - Возводит число х в степень y
 • ﻿radians(x) - Переводит угол x из градусов в радианы
+• ﻿randrange([a], b, [s]) - Выдаёт случайное число на промежутке от [a, b) ([0, b) , если a не предоставлено), с шагом s (1, если s не предоставлено)
 • ﻿sin(x)  -  Синус x радиан
 • ﻿sinh(x) - Гиперболический синус x
 • ﻿sqrt(x) - Корень положительного числа x
+• ﻿str(x) - Переводит x в строку
 • ﻿tan(x) -  Тангенс x радиан
 • ﻿tanh(x) - Гиперболический тангенс x
-• ﻿randrange([a], b, [s]) - Выдаёт случайное число на промежутке от [a, b) ([0, b) , если a не предоставлено), с шагом s (1, если s не предоставлено)
-• ﻿int(x) - Переводит x в целое число
-• ﻿str(x) - Переводит x в строку
