@@ -1,1 +1,3 @@
+• Добавлены функции gcdext и factorize для пз по МГИА
+• Добавлена команда greet
 • Забастовка закончилась падением режима и исполнением всех наших требований, УРА, ТОВАРИЩИ!
